syntax = "proto3";

package greet;

option go_package = "grpc-basics/proto";

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string message = 1;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse);
  rpc GreetServerStreaming(GreetRequest) returns (stream GreetResponse);
  rpc GrretClientStreaming(stream GreetRequest) returns (GreetResponse);
  rpc GreetBidirectionalStreaming(stream GreetRequest) returns (stream GreetResponse);
};